# graphrag_kb_server

./: .dockerignore  .env_docker  .env_local  .gitignore  Dockerfile  Dockerfile.helper  README.md  build_docker.ps1  build_docker.sh  build_front_end.sh  docker-compose.yml  docker_build.ps1  docker_build.sh  docker_compose.ps1  docker_compose.sh  docker_helper_build.ps1  docker_publish.ps1  docker_run.bat  graph_kb_server_sample.service  pyproject.toml  run.ps1  run.sh  vision.md
.cursor/rules/: react.mdc
.github/workflows/: build-push-docker.yml  lint.yml
config/: administration_docker.yaml  administration_local.yaml  security.yaml
data/: onepoint_lightrag_summary.json
data/onepoint/output/: communities.parquet  community_reports.parquet  documents.parquet  entities.parquet  relationships.parquet  stats.json  text_units.parquet
data/powerpoint/: sample1.md
data/requests/: search_documents_input.json  search_documents_input_2.json
docker/: run.sh
docs/: vision.md
docs/bruno/AI Engine/: Get context with references.bru  bruno.json
docs/bruno/AI Engine Local/: Context with Graph Clustre.bru  Context with Graph Responsible AI.bru  bruno.json
docs/capabilities/: AI Engine features.xlsx
docs/markdown/: Algorithmic-impact-assessment-user-guide_aggregate.md  Algorithmic-impact-assessment-user-guide_aggregate_changed.md
docs/prompts/: prompts_20251029080510.json  prompts_20251029080746.json  prompts_20251029080820.json
docs/sample_projects/gothic_fiction/: carmilla.txt  phantom_of_the_opera.txt
docs/sample_projects/lmo2/: be_light_spread_light_final.txt  behind_the_mask_final.txt  benefits_of_meditation_final.txt  bk_meditation_final.txt  (+73 more)
docs/settings/: settings.yaml
front_end/: api.js  graph.js  graphrag_visualization.html  index.html  index.js  package-lock.json  package.json  project.js  server.js  token.js
front_end/styles/: index.css
front_end_chat/: README.md  build.ps1  index.html  package-lock.json  package.json  run.ps1  tsconfig.json  tsconfig.node.json  vite.config.ts
front_end_chat/examples/: example_urls.txt  index_float.html
front_end_chat/src/: Admin.tsx  Administrator.tsx  App.css  App.tsx  FloatingChat.tsx  Login.tsx  auth_config.json  dashboard.tsx  index.css  main.tsx
graphrag_kb_server/: config.py  logger.py  prompt_loader.py
graphrag_kb_server/callbacks/: callback_support.py
graphrag_kb_server/cli/: build_web.py  docker_config_main.py  jwt_main.py  linkedin_login.py
graphrag_kb_server/main/: __init__.py  bootstrap.py  build_context.py  cors.py  error_handler.py  example.py  index.py  linkedin_server.py  mcp_server.py  multi_tennant_server.py  pdf_server.py  project_request_functions.py  project_server.py  query_support.py  search.py  search_server.py  server.py  simple_template.py  topic_generation.py  webapp.py  websocket.py  websocket_api.py
graphrag_kb_server/model/: admin.py  chat_response.py  community.py  context.py  context_builder_data.py  digest_functions.py  document_chunk.py  document_trend_result.py  engines.py  error.py  graph.py  jwt_token.py  node_centrality.py  path_link.py  path_properties.py  project.py  rag_parameters.py  related_topics.py  snippet.py  tennant.py  topics.py  web_format.py  websocket_commands.py
graphrag_kb_server/service/: __init__.py  community_service.py  docs_image_extraction.py  document_chunk_service.py  email_service.py  environment_service.py  file_conversion.py  file_find_service.py  generate_url_service.py  google_ai_client.py  html_to_pdf.py  index.py  index_support.py  jwt.py  jwt_main.py  jwt_service.py  last_updated_service.py  link_extraction_service.py  login.py  pdf_image_extraction.py  pdf_to_text.py  project.py  query.py  question_generation_service.py  similar_topics.py  snippet_generation_service.py  tennant.py  topic_generation.py  topics_post_processing.py  trendiness_research.py  validations.py  zip_service.py
graphrag_kb_server/test/: test_cache.py  test_config.py  test_context.py  test_environment_service.py  test_index.py  test_jwt.py  test_lightrag_init.py  test_pdf_to_text.py  test_project.py  test_query.py  test_tennant.py  test_tennant_api.py  test_validations.py  test_webapp.py  test_zip_service.py
graphrag_kb_server/utils/: cache.py  date_support.py  file_support.py  quick_json_loader.py
prompts/: prompts.toml  prompts.yaml
sql/: alter_search_results_add_image_links.sql  setup.sql
templates/: snippet.html
(+254 files in other folders)
