[project]
name = "graphrag-kb-server"
version = "0.1.0"
description = "Project with indexing scripts to create the knowledge graph and the embeddings that can be used in AI Agents."
authors = [{ name = "Gil Fernandes", email = "gil.fernandes@onepointltd.com" }]
requires-python = ">=3.14"
readme = "README.md"
license = "MIT"
dependencies = [
    "python-dotenv>=1.0.1,<2",
    "numba==0.63.1",
    "markdown~=3.7",
    "aiohttp>=3.10.11,<4",
    "python-socketio>=5.11.4,<6",
    "aiohttp-swagger3>=0.10.0",
    "pdf-to-markdown-llm==0.1.17",
    "lightrag-hku[api]>=1.4.9.11",
    "nano-vectordb>=0.0.4.3",
    "google-genai>=1.39.1",
    "pyvis>=0.3.2",
    "rustworkx>=0.16.0",
    "tomli>=2.2.1",
    "asyncer>=0.0.8",
    "weasyprint>=66.0",
    "selenium>=4.36.0",
    "webdriver-manager>=4.0.2",
    "asyncpg>=0.30.0",
    "together>=1.5.29",
    "openrouter>=0.6.0",
    "scikit-learn>=1.8.0",
    "linkedin-scraper==2.11.2",
    "tiktoken>=0.12.0",
    "bs4>=0.0.2",
    "apify-client>=2.5.0",
]

[project.scripts]
build_web = "graphrag_kb_server.cli.build_web:run"
webapp = "graphrag_kb_server.main.webapp:run_server"

[dependency-groups]
dev = [
    "aiohttp-test-utils>=0.5.0,<0.6",
    "black>=24.10.0,<25",
    "pytest>=8.3.3,<9",
    "pytest-aiohttp>=1.0.5,<2",
    "ruff>=0.7.4,<0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py39"

[tool.poe.tasks]
sort_imports = "ruff check --select I --fix ."
